Small fixes and adjustments
Profile:
- Normal User: Changed 'NormalUser' to 'Normal User' in status container for readability;
- Waiting: Show 'Try Enter' button only if the user has the necessary positive votes in order to enter the pool
- Miner: Made claim rewards and change btc address buttons clickable if the values in field don't change; fixed an issue with claim rewards read-only returning undefined value

Dashboard:
- Formatted 'Stacks Rewards' field to 'x STX';

Voting:
- Removals: changed positive button dimensions to small, because it was changing row height, causing a horizontal scrollbar to appear within the table
- Notifier: removed fixed table width causing a horizontal page scroll to appear when there was a vertical scrollbar in the page; moved info container closer to the page headers when the voting period starts and the miners table appears, otherwise it's placement remains in the middle of the page.

--- a/src/components/appMenuSections/profile/styles.css
+++ b/src/components/appMenuSections/profile/styles.css
@@ -1,6 +1,7 @@
 .default-page-container {
   height: 100vh;
-  width: 100vw;
+  /* width: 100vw; - Do not add this, because if there's vertical scroll, the page will also have horizontal scroll. without it,
+                     the page width will be automatically adjusted for the contents. You only need the height. */
   /* background-color: #eeeeee; */
   /* color: #2f2f2f; */
   /* color: #121212; */
